<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.FullProfileActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/cover_photo"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/bg"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo_profil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover_photo"
        tools:src="@color/yellow" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="245dp"
        android:layout_height="35dp"
        android:textColor="@color/primarly"
        android:textStyle="bold"
        android:textSize="25sp"
        tools:text="Nama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo_profil"
        app:layout_constraintTop_toTopOf="@+id/img_item_photo_profil" />

    <TextView
        android:id="@+id/full_detail"
        android:layout_width="245dp"
        android:layout_height="25dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/yulski"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo_profil"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="14dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_item_photo_profil"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/ic_baseline_work_24" />

    <TextView
        android:id="@+id/work_place"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/bebasneue"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/full_detail"
        app:layout_constraintVertical_bias="0"
        tools:text="Rumah Belajar Indonesia" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_place"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:id="@+id/location_address"
        android:layout_width="290dp"
        android:fontFamily="@font/bebasneue"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/work_place"
        app:layout_constraintVertical_bias="0"
        tools:text="Jln. Malioboro No.81, Taman Impian" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/ic_repository" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_marginLeft="6dp"
        android:text="@string/repository"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:fontFamily="@font/bebasneue"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/location_address"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:textColor="@color/black"
        android:fontFamily="@font/bebasneue"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/repositoris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/location_address" />

    <LinearLayout
        android:id="@+id/linear"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/text_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10"
            android:textColor="@color/primarly"
            android:textSize="15sp"
            android:fontFamily="@font/bebasneue"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@color/primarly"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/bebasneue"/>
        <TextView
            android:id="@+id/text_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10"
            android:textColor="@color/primarly"
            android:textSize="15sp"
            android:fontFamily="@font/bebasneue"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/primarly"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/bebasneue"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" >
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/primarly"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/yulistogglefavorite"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:textOn=""
        android:textOff=""
        android:background="@drawable/favorite_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>